rework select: rework select style

--- a/modules/dropdown/views/dropdown.html
+++ b/modules/dropdown/views/dropdown.html
@@ -1,1 +1,2 @@
-<div class="dropdown" ng-transclude></div>
+<div class="dropdown"
+     ng-class="{ 'dropdown--is-open': lxDropdown.isOpen }" ng-transclude></div>
