--- a/modules/select/views/select-selected.html
+++ b/modules/select/views/select-selected.html
@@ -1,19 +1,21 @@
 <div lx-dropdown-toggle>
-    <span class="lx-select-label"
-          ng-class="::{ 'lx-select-label--floating': lxSelectSelected.parentCtrl.floatingLabel }">
-        {{ ::lxSelectSelected.parentCtrl.placeholder }}
-    </span>
+    <div class="lx-select-selected-wrapper">
+        <div class="lx-select-selected" ng-if="!lxSelectSelected.parentCtrl.multiple && lxSelectSelected.parentCtrl.getSelectedModel()">
+            <span class="lx-select-selected__value"
+                  ng-bind-html="lxSelectSelected.parentCtrl.displaySelected()"></span>
 
-    <div class="lx-select-selected" ng-if="!lxSelectSelected.parentCtrl.multiple && lxSelectSelected.parentCtrl.getSelectedModel()">
-        <span ng-bind-html="lxSelectSelected.parentCtrl.displaySelected()"></span>
+            <a class="lx-select-selected__clear"
+               ng-click="lxSelectSelected.clearModel($event)"
+               ng-if="::lxSelectSelected.parentCtrl.allowClear">
+                <i class="mdi mdi-close-circle"></i>
+            </a>
+        </div>
 
-        <a ng-click="lxSelectSelected.clearModel()" ng-if="::lxSelectSelected.parentCtrl.allowClear">
-            <i class="mdi mdi-close-circle"></i>
-        </a>
-    </div>
-
-    <div class="lx-select-selected" ng-if="lxSelectSelected.parentCtrl.multiple && lxSelectSelected.parentCtrl.getSelectedModel().length">
-        <span ng-repeat="selected in lxSelectSelected.parentCtrl.getSelectedModel()"
-              ng-bind-html="lxSelectSelected.parentCtrl.displaySelected(selected)"></span>
+        <div class="lx-select-selected" ng-if="lxSelectSelected.parentCtrl.multiple && lxSelectSelected.parentCtrl.getSelectedModel().length">
+            <span class="lx-select-selected__tag"
+                  ng-click="lxSelectSelected.removeSelected(selected, $event)"
+                  ng-repeat="selected in lxSelectSelected.parentCtrl.getSelectedModel()"
+                  ng-bind-html="lxSelectSelected.parentCtrl.displaySelected(selected)"></span>
+        </div>
     </div>
 </div>
