feat select: add helper message

--- a/modules/select/demo/includes/example.html
+++ b/modules/select/demo/includes/example.html
@@ -29,6 +29,8 @@
                    lx-choices="ajax.list"
                    lx-display-filter="true"
                    lx-filter="ajax.update"
+                   lx-helper="!ajax.list.length"
+                   lx-helper-message="Type minimum 2 to search"
                    lx-loading="ajax.loading"
                    lx-model-to-selection="ajax.toSelection"
                    lx-placeholder="Lorem Ipsum"
