feat select: handle with fixed label

--- a/modules/select/demo/includes/example.html
+++ b/modules/select/demo/includes/example.html
@@ -11,6 +11,7 @@
                    lx-allow-clear="true"
                    lx-choices="people"
                    lx-display-filter="true"
+                   lx-fixed-label="true"
                    lx-placeholder="Lorem Ipsum">
             <lx-select-selected>
                 {{ $selected.name + ' ' + $selected.age }}
