--- a/modules/select/views/select.html
+++ b/modules/select/views/select.html
@@ -7,8 +7,8 @@
                  'lx-select--default-style': !lxSelect.customStyle,
                  'lx-select--custom-style': lxSelect.customStyle }">
     <span class="lx-select-label"
-          ng-class="{ 'lx-select-label--fixed': lxSelect.fixedLabel,
-                      'lx-select-label--is-active': (!lxSelect.multiple && lxSelect.getSelectedModel()) || (lxSelect.multiple && lxSelect.getSelectedModel().length) }">
+          ng-class="{ 'lx-select-label--is-active': (!lxSelect.multiple && lxSelect.getSelectedModel()) || (lxSelect.multiple && lxSelect.getSelectedModel().length) }"
+          ng-if="!lxSelect.fixedLabel || lxSelect.fixedLabel && ((!lxSelect.multiple && !lxSelect.getSelectedModel()) || (lxSelect.multiple && !lxSelect.getSelectedModel().length))">
         {{ ::lxSelect.placeholder }}
     </span>
 
