rework text-input: completely rework text input
BREAKING:
All attributes must now be prefixed by lx.
Some attributes have changed, please refer to the updated documentation.

--- a/modules/text-field/demo/includes/example.html
+++ b/modules/text-field/demo/includes/example.html
@@ -1,21 +1,21 @@
 <!-- Light theme -->
 <div flex-container="row">
     <div flex-item>
-        <lx-text-field label="Company" disabled="true">
-            <input type="text" ng-model="textFields.disabled" ng-disabled="true">
+        <lx-text-field lx-label="Company" ng-disabled="true">
+            <input type="text" ng-model="textFields.disabled">
         </lx-text-field>
     </div>
 </div>
 
 <div flex-container="row" flex-gutter="24">
     <div flex-item>
-        <lx-text-field label="Last name">
+        <lx-text-field lx-label="Last name">
             <input type="text" ng-model="textFields.lastName">
         </lx-text-field>
     </div>
 
     <div flex-item>
-        <lx-text-field label="First name">
+        <lx-text-field lx-label="First name">
             <input type="text" ng-model="textFields.firstName">
         </lx-text-field>
     </div>
@@ -23,7 +23,7 @@
 
 <div flex-container="row" flex-gutter="24">
     <div flex-item>
-        <lx-text-field label="Email" error="!emailValidation(textFields.firstEmail)">
+        <lx-text-field lx-label="Email" lx-error="!emailValidation(textFields.firstEmail)">
             <input type="email" ng-model="textFields.firstEmail">
         </lx-text-field>
 
@@ -31,15 +31,15 @@
     </div>
 
     <div flex-item>
-        <lx-text-field label="Email" error="!emailValidation(textFields.secondEmail)">
+        <lx-text-field lx-label="Email" lx-error="!emailValidation(textFields.secondEmail)">
             <input type="email" ng-model="textFields.secondEmail">
         </lx-text-field>
     </div>
 
     <div flex-item>
-        <lx-text-field label="Repeat previous email"
-                       valid="emailValidation(textFields.secondEmail) && textFields.secondEmail === textFields.thirdEmail"
-                       error="!emailValidation(textFields.secondEmail) || textFields.secondEmail !== textFields.thirdEmail">
+        <lx-text-field lx-label="Repeat previous email"
+                       lx-valid="emailValidation(textFields.secondEmail) && textFields.secondEmail === textFields.thirdEmail"
+                       lx-error="!emailValidation(textFields.secondEmail) || textFields.secondEmail !== textFields.thirdEmail">
             <input type="email" ng-model="textFields.thirdEmail">
         </lx-text-field>
     </div>
@@ -47,7 +47,7 @@
 
 <div flex-container="row">
     <div flex-item>
-        <lx-text-field label="Description">
+        <lx-text-field lx-label="Description">
             <textarea ng-model="textFields.description"></textarea>
         </lx-text-field>
     </div>
@@ -56,19 +56,19 @@
 <div class="mt++" flex-container="row" flex-gutter="24">
     <div flex-item>
         <form>
-            <lx-text-field label="First and last name" fixed-label="true" icon="account">
+            <lx-text-field lx-label="First and last name" lx-fixed-label="true" lx-icon="account">
                 <input type="text" ng-model="textFields.fixedFirstName">
             </lx-text-field>
 
-            <lx-text-field label="Phone number" fixed-label="true" icon="phone">
+            <lx-text-field lx-label="Phone number" lx-fixed-label="true" lx-icon="phone">
                 <input type="text" ng-model="textFields.fixedLastName">
             </lx-text-field>
 
-            <lx-text-field label="Email address" fixed-label="true" icon="email">
+            <lx-text-field lx-label="Email address" lx-fixed-label="true" lx-icon="email">
                 <input type="email" ng-model="textFields.fixedEmail">
             </lx-text-field>
 
-            <lx-text-field label="Location" fixed-label="true" icon="city">
+            <lx-text-field lx-label="Location" lx-fixed-label="true" lx-icon="city">
                 <input type="text" ng-model="textFields.fixedAdress">
             </lx-text-field>
         </form>
@@ -76,19 +76,19 @@
 
     <div flex-item>
         <form>
-            <lx-text-field label="First name" fixed-label="true">
+            <lx-text-field lx-label="First name" lx-fixed-label="true">
                 <input type="text" ng-model="textFields.fixedFirstName2">
             </lx-text-field>
 
-            <lx-text-field label="Last name" fixed-label="true">
+            <lx-text-field lx-label="Last name" lx-fixed-label="true">
                 <input type="text" ng-model="textFields.fixedLastName2">
             </lx-text-field>
 
-            <lx-text-field label="Email" fixed-label="true">
+            <lx-text-field lx-label="Email" lx-fixed-label="true">
                 <input type="email" ng-model="textFields.fixedEmail2">
             </lx-text-field>
 
-            <lx-text-field label="Address" fixed-label="true">
+            <lx-text-field lx-label="Address" lx-fixed-label="true">
                 <input type="text" ng-model="textFields.fixedAdress2">
             </lx-text-field>
         </form>
@@ -99,7 +99,7 @@
 <div class="bgc-grey-800 mt++ p++ pt0">
     <div flex-container="row">
         <div flex-item>
-            <lx-text-field label="Company" disabled="true" theme="dark">
+            <lx-text-field lx-label="Company" ng-disabled="true" theme="dark">
                 <input type="text" ng-model="textFields.disabledDark" ng-disabled="true">
             </lx-text-field>
         </div>
@@ -107,13 +107,13 @@
 
     <div flex-container="row" flex-gutter="24">
         <div flex-item>
-            <lx-text-field label="Last name" theme="dark">
+            <lx-text-field lx-label="Last name" theme="dark">
                 <input type="text" ng-model="textFields.lastNameDark">
             </lx-text-field>
         </div>
 
         <div flex-item>
-            <lx-text-field label="First name" theme="dark">
+            <lx-text-field lx-label="First name" theme="dark">
                 <input type="text" ng-model="textFields.firstNameDark">
             </lx-text-field>
         </div>
@@ -121,21 +121,21 @@
 
     <div flex-container="row" flex-gutter="24">
         <div flex-item>
-            <lx-text-field label="Email" error="!emailValidation(textFields.firstEmail)" theme="dark">
+            <lx-text-field lx-label="Email" lx-error="!emailValidation(textFields.firstEmail)" theme="dark">
                 <input type="email" ng-model="textFields.firstEmailDark">
             </lx-text-field>
         </div>
 
         <div flex-item>
-            <lx-text-field label="Email" error="!emailValidation(textFields.secondEmail)" theme="dark">
+            <lx-text-field lx-label="Email" lx-error="!emailValidation(textFields.secondEmail)" theme="dark">
                 <input type="email" ng-model="textFields.secondEmailDark">
             </lx-text-field>
         </div>
 
         <div flex-item>
-            <lx-text-field label="Repeat previous email"
-                           valid="emailValidation(textFields.secondEmail) && textFields.secondEmail === textFields.thirdEmail"
-                           error="!emailValidation(textFields.secondEmail) || textFields.secondEmail !== textFields.thirdEmail"
+            <lx-text-field lx-label="Repeat previous email"
+                           lx-valid="emailValidation(textFields.secondEmail) && textFields.secondEmail === textFields.thirdEmail"
+                           lx-error="!emailValidation(textFields.secondEmail) || textFields.secondEmail !== textFields.thirdEmail"
                            theme="dark">
                 <input type="email" ng-model="textFields.thirdEmailDark">
             </lx-text-field>
@@ -144,7 +144,7 @@
 
     <div flex-container="row">
         <div flex-item>
-            <lx-text-field label="Description" theme="dark">
+            <lx-text-field lx-label="Description" theme="dark">
                 <textarea ng-model="textFields.descriptionDark"></textarea>
             </lx-text-field>
         </div>
@@ -153,19 +153,19 @@
     <div class="mt++" flex-container="row" flex-gutter="24">
         <div flex-item>
             <form>
-                <lx-text-field label="First and last name" fixed-label="true" icon="account" theme="dark">
+                <lx-text-field lx-label="First and last name" lx-fixed-label="true" lx-icon="account" theme="dark">
                     <input type="text" ng-model="textFields.fixedFirstNameDark">
                 </lx-text-field>
 
-                <lx-text-field label="Phone number" fixed-label="true" icon="phone" theme="dark">
+                <lx-text-field lx-label="Phone number" lx-fixed-label="true" lx-icon="phone" theme="dark">
                     <input type="text" ng-model="textFields.fixedLastNameDark">
                 </lx-text-field>
 
-                <lx-text-field label="Email address" fixed-label="true" icon="email" theme="dark">
+                <lx-text-field lx-label="Email address" lx-fixed-label="true" lx-icon="email" theme="dark">
                     <input type="email" ng-model="textFields.fixedEmailDark">
                 </lx-text-field>
 
-                <lx-text-field label="Location" fixed-label="true" icon="city" theme="dark">
+                <lx-text-field lx-label="Location" lx-fixed-label="true" lx-icon="city" theme="dark">
                     <input type="text" ng-model="textFields.fixedAdressDark">
                 </lx-text-field>
             </form>
@@ -173,19 +173,19 @@
 
         <div flex-item>
             <form>
-                <lx-text-field label="First name" fixed-label="true" theme="dark">
+                <lx-text-field lx-label="First name" lx-fixed-label="true" theme="dark">
                     <input type="text" ng-model="textFields.fixedFirstName2Dark">
                 </lx-text-field>
 
-                <lx-text-field label="Last name" fixed-label="true" theme="dark">
+                <lx-text-field lx-label="Last name" lx-fixed-label="true" theme="dark">
                     <input type="text" ng-model="textFields.fixedLastName2Dark">
                 </lx-text-field>
 
-                <lx-text-field label="Email" fixed-label="true" theme="dark">
+                <lx-text-field lx-label="Email" lx-fixed-label="true" theme="dark">
                     <input type="email" ng-model="textFields.fixedEmail2Dark">
                 </lx-text-field>
 
-                <lx-text-field label="Address" fixed-label="true" theme="dark">
+                <lx-text-field lx-label="Address" lx-fixed-label="true" theme="dark">
                     <input type="text" ng-model="textFields.fixedAdress2Dark">
                 </lx-text-field>
             </form>
