--- a/modules/text-field/scss/_text-field.scss
+++ b/modules/text-field/scss/_text-field.scss
@@ -1,8 +1,8 @@
 ///*------------------------------------*\
-//    #OBJECTS-TEXT-FIELD
+//    #TEXT-FIELD
 //\*------------------------------------*/
 
-// Text field base styles
+// Text field
 .text-field {
     position: relative;
     padding-top: $base-spacing-unit * 4;
@@ -22,7 +22,7 @@
     &:after {
         @include position(absolute, null 0 $base-spacing-unit - 2 0);
         height: 2px;
-        background-color: $blue-500;
+        background-color: $blue;
         @include transform(scale(0));
         @include transition-property(transform);
         @include transition-duration(0.6s);
@@ -30,113 +30,35 @@
     }
 }
 
-.text-field--is-active {
-    .text-field__label {
-        @include transform(scale(0.75) translateY(0));
-        color: $black-2;
-    }
-}
-
-.text-field--is-focused {
+.text-field--is-focus {
     &:after {
         @include transform(scale(1));
-    }
-
-    .text-field__label {
-        color: $blue-500;
-    }
-
-    &.text-field--dark-theme {
-        .text-field__label {
-            color: $blue-500;
-        }
     }
 }
 
 .text-field--is-disabled {
+    pointer-events: none;
+
     &:before {
         border-bottom-style: dashed;
-    }
-
-    .text-field__label {
-        color: $black-3;
-    }
-
-    .text-field__input {
-        color: $black-3;
-        cursor: not-allowed;
-    }
-
-    &.text-field--dark-theme {
-        .text-field__input {
-            color: $white-3;
-        }
-    }
-}
-
-.text-field--has-error {
-    &:after {
-        background-color: $red-500;
-        @include transform(scale(1));
-    }
-
-    &.text-field--is-active .text-field__label {
-        color: $red-500;
-    }
-
-    &.text-field--dark-theme {
-        .text-field__label {
-            color: $red-500;
-        }
     }
 }
 
 .text-field--fixed-label {
     padding-top: $base-spacing-unit;
-
-    .text-field__label {
-        @include transform(none);
-    }
-
-    &.text-field--is-focused {
-        .text-field__label {
-            color: $black-3;
-        }
-    }
-
-    &.text-field--dark-theme.text-field--is-focused {
-        .text-field__label {
-            color: $white-3;
-        }
-    }
 }
 
-.text-field--label-hidden {
-    .text-field__label {
-        display: none;
-    }
-}
-
-.text-field--is-valid {
-    .text-field__label {
-        color: $green-500;
-    }
-
+.text-field--valid {
     &:after {
-        background-color: $green-500;
+        background-color: $green;
         @include transform(scale(1));
     }
-
-    &.text-field--dark-theme {
-        .text-field__label {
-            color: $green-500;
-        }
-    }
 }
 
-.text-field--dark-theme {
-    &:before {
-        border-color: $white-3;
+.text-field--error {
+    &:after {
+        background-color: $red;
+        @include transform(scale(1));
     }
 }
 
@@ -144,11 +66,11 @@
     margin-left: $base-spacing-unit * 8;
 }
 
-    // Text field label
+    // Text field: label
     .text-field__label {
         display: block;
         @include position(absolute, $base-spacing-unit null null 0);
-        color: $black-3;
+        color: $black-2;
         line-height: 32px;
         pointer-events: none;
         @include transform(translateY($base-spacing-unit * 3));
@@ -157,21 +79,36 @@
         @include transition-duration(0.4s);
         @include transition-timing-function($ease-out-quint);
 
-        .text-field--dark-theme & {
-            color: $white-3;
+        .text-field--is-active:not(.text-field--fixed-label) & {
+            @include transform(scale(0.75) translateY(0));
+        }
+
+        .text-field--is-focus:not(.text-field--fixed-label) & {
+            color: $blue;
+        }
+
+        .text-field--is-disabled & {
+            color: $black-3;
+        }
+
+        .text-field--fixed-label & {
+            @include transform(none);
+        }
+
+        .text-field--valid & {
+            color: $green;
+        }
+
+        .text-field--error & {
+            color: $red;
         }
     }
 
-    // Text field input
+    // Text field: input
     .text-field__input {
-        @include text-field-reset;
+        @include text-field-reset();
         width: 100%;
-        resize: none;
         font-weight: 400;
-
-        .text-field--dark-theme & {
-            color: $white;
-        }
     }
 
     input.text-field__input {
@@ -182,9 +119,10 @@
     textarea.text-field__input {
         height: 24px;
         margin: 4px 0;
+        resize: none;
     }
 
-    // Text field icon
+    // Text field: icon
     .text-field__icon {
         @include position(absolute, 2px null null -68px);
         @include size(48px 44px);
@@ -196,20 +134,16 @@
         @include transition-duration(0.4s);
         @include transition-timing-function($ease-out-quint);
 
-        .text-field--dark-theme & {
-            color: $white;
+        .text-field--is-focus & {
+            color: $blue;
         }
 
-        .text-field--is-focused & {
-            color: $blue-500;
+        .text-field--valid & {
+            color: $green;
         }
 
-        .text-field--has-error & {
-            color: $red-500;
-        }
-
-        .text-field--is-valid & {
-            color: $green-500;
+        .text-field--error & {
+            color: $red;
         }
     }
 
