--- a/modules/select/views/select.html
+++ b/modules/select/views/select.html
@@ -9,7 +9,7 @@
     <span class="lx-select-label"
           ng-class="{ 'lx-select-label--is-active': (!lxSelect.multiple && lxSelect.getSelectedModel()) || (lxSelect.multiple && lxSelect.getSelectedModel().length) }"
           ng-if="!lxSelect.fixedLabel || lxSelect.fixedLabel && ((!lxSelect.multiple && !lxSelect.getSelectedModel()) || (lxSelect.multiple && !lxSelect.getSelectedModel().length))">
-        {{ ::lxSelect.placeholder }}
+        {{ ::lxSelect.label }}
     </span>
 
     <lx-dropdown lx-width="100%">
