--- a/modules/date-picker/views/date-picker.html
+++ b/modules/date-picker/views/date-picker.html
@@ -2,9 +2,9 @@
     <!-- Date picker input -->
     <div class="lx-date__input-wrapper">
         <lx-text-field class="lx-date-input"
-                       label="{{ lxDatePicker.inputLabel }}"
-                       fixed-label="lxDatePicker.inputFixedLabel"
-                       icon="{{ lxDatePicker.inputIcon }}"
+                       lx-icon="{{ lxDatePicker.inputIcon }}"
+                       lx-fixed-label="lxDatePicker.inputFixedLabel"
+                       lx-label="{{ lxDatePicker.inputLabel }}"
                        ng-click="lxDatePicker.openPicker()">
             <input type="text" ng-model="lxDatePicker.ngModelMomentFormatted">
         </lx-text-field>
