rework file input: completely rework file input
BREAKING:
All attributes must now be prefixed by lx.
Some attributes have changed, please refer to the updated documentation.

--- a/modules/file-input/demo/includes/example.html
+++ b/modules/file-input/demo/includes/example.html
@@ -1,6 +1,6 @@
 <div flex-container="row" flex-gutter="24">
     <div flex-item>
-        <lx-file-input label="Browse..."></lx-file-input>
+        <lx-file-input lx-label="Browse..." lx-change="testFileInput"></lx-file-input>
     </div>
 
     <div flex-item>
