fix text field: fix disabled text field style

--- a/modules/text-field/scss/_text-field.scss
+++ b/modules/text-field/scss/_text-field.scss
@@ -109,6 +109,10 @@
         @include text-field-reset();
         width: 100%;
         font-weight: 400;
+
+        .text-field--is-disabled & {
+            color: $black-3 !important;
+        }
     }
 
     input.text-field__input {
